fluxcd/apps/overlays/production/qbittorrent/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: gluetun
        image: docker.jcr.pcfae.com/qmcgaw/gluetun:latest
        securityContext:
          privileged: true
        volumeMounts:
        - name: swift-sail-qbittorrent-gluetun-config
          mountPath: /gluetun
        - name: swift-sail-qbittorrent-gluetun-tmp
          mountPath: /tmp/gluetun
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest
        volumeMounts:
        - name: swift-sail-qbittorrent-config
          mountPath: /config
        - name: swift-sail-qbittorrent-downloads
          mountPath: /downloads
      - name: port-manager
        image: docker.jcr.pcfae.com/prplanit/qbittorrent-port-manager:1.3
        volumeMounts:
        - name: swift-sail-qbittorrent-gluetun-tmp
          mountPath: /tmp/gluetun
  volumeClaimTemplates:
  - metadata:
      name: swift-sail-qbittorrent-gluetun-config
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: ceph-rbd-retain
      resources:
        requests:
          storage: 1Gi
  - metadata:
      name: swift-sail-qbittorrent-config
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: ceph-rbd-retain
      resources:
        requests:
          storage: 5Gi
  - metadata:
      name: swift-sail-qbittorrent-downloads
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: ceph-rbd-retain
      resources:
        requests:
          storage: 500Gi
  - metadata:
      name: swift-sail-qbittorrent-gluetun-tmp
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: ceph-rbd-retain
      resources:
        requests:
          storage: 20Mi
