fluxcd/apps/overlays/production/qbittorrent/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  annotations:
    lbipam.cilium.io/ips: "172.22.30.33"
    lbipam.cilium.io/sharing-key: "great-sea"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    service.cilium.io/loadbalancer-mode: "dsr"
spec:
  type: LoadBalancer
  ports:
  - $patch: replace
  - name: http-proxy
    port: 8888
    targetPort: 8888
    protocol: TCP
  - name: shadowsocks-tcp
    port: 8388
    targetPort: 8388
    protocol: TCP
  - name: shadowsocks-udp
    port: 8388
    targetPort: 8388
    protocol: UDP
  - name: qbittorrent
    port: 6887
    targetPort: 6887
    protocol: TCP
