fluxcd/apps/overlays/production/qbittorrent/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-xylem
spec:
  parentRefs:
    - name: xylem-gateway
      namespace: arylls-lookout
  hostnames:
    - "qbitt.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent
          port: 6887
